--- a/src/main/resources/org/example/lab_2_lm/lab_2_2_lm.fxml
+++ b/src/main/resources/org/example/lab_2_lm/lab_2_2_lm.fxml
@@ -8,56 +8,62 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="400.0" stylesheets="@my.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane xmlns="http://javafx.com/javafx/24.0.1"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="org.example.lab_2_lm.EditController"
+            prefHeight="180.0" prefWidth="400.0" stylesheets="@my.css">
+
    <left>
       <VBox prefHeight="150.0" prefWidth="94.0" BorderPane.alignment="CENTER">
          <children>
             <Label text="ПІП">
                <VBox.margin>
-                  <Insets bottom="30.0" left="30.0" right="10.0" top="30.0" />
+                  <Insets bottom="30.0" left="30.0" right="10.0" top="30.0"/>
                </VBox.margin>
                <font>
-                  <Font size="14.0" />
+                  <Font size="14.0"/>
                </font>
             </Label>
             <Label text="Телефон">
                <VBox.margin>
-                  <Insets bottom="10.0" left="20.0" right="10.0" top="20.0" />
+                  <Insets bottom="10.0" left="20.0" right="10.0" top="20.0"/>
                </VBox.margin>
                <font>
-                  <Font size="14.0" />
+                  <Font size="14.0"/>
                </font>
             </Label>
          </children>
       </VBox>
    </left>
+
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <TextField>
+            <TextField fx:id="txtPip">
                <VBox.margin>
-                  <Insets bottom="30.0" left="10.0" right="10.0" top="30.0" />
+                  <Insets bottom="30.0" left="10.0" right="10.0" top="30.0"/>
                </VBox.margin>
             </TextField>
-            <TextField>
+            <TextField fx:id="txtPhone">
                <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                </VBox.margin>
             </TextField>
          </children>
       </VBox>
    </center>
+
    <right>
       <VBox prefHeight="150.0" prefWidth="88.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" prefWidth="500.0" text="Ок">
+            <Button fx:id="btnOk" mnemonicParsing="false" text="Ок" onAction="#actionSave">
                <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="30.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="30.0"/>
                </VBox.margin>
             </Button>
-            <Button mnemonicParsing="false" prefWidth="200.0" text="Відміна">
+            <Button fx:id="btnCancel" mnemonicParsing="false" text="Відміна" onAction="#actionClose">
                <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="30.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="30.0"/>
                </VBox.margin>
             </Button>
          </children>
