--- a/src/main/resources/org/example/lab_2_lm/lab_2_lm.fxml
+++ b/src/main/resources/org/example/lab_2_lm/lab_2_lm.fxml
@@ -16,12 +16,12 @@
    <children>
       <HBox maxHeight="100.0" prefHeight="100.0" prefWidth="600.0" stylesheets="@my.css" VBox.vgrow="ALWAYS">
          <children>
-            <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#openNewWindow" prefHeight="40.0" prefWidth="140.0" stylesheets="@my.css" text="Добавити">
+            <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#openWindow" prefHeight="40.0" prefWidth="140.0" stylesheets="@my.css" text="Добавити">
                <HBox.margin>
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="btnEdit" mnemonicParsing="false" onAction="#openNewWindow" prefHeight="40.0" prefWidth="140.0" text="Редагувати">
+            <Button fx:id="btnEdit" mnemonicParsing="false" onAction="#openWindow" prefHeight="40.0" prefWidth="140.0" text="Редагувати">
                <HBox.margin>
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </HBox.margin>
@@ -48,10 +48,13 @@
       </AnchorPane>
       <AnchorPane prefHeight="300.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
          <children>
-            <TableView fx:id="tableAdressBook" layoutX="186.0" layoutY="23.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <TableView fx:id="tableAddressBook" layoutX="186.0" layoutY="23.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="ПІП" />
-                <TableColumn prefWidth="75.0" text="Телефон" />
+                 <TableColumn fx:id="columnPIP" prefWidth="75.0" text="ПІП" />
+                 <TableColumn fx:id="columnPhone" prefWidth="75.0" text="Телефон" />
+
+
+
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -69,6 +72,7 @@
          <children>
             <Label fx:id="labelCount" layoutX="68.0" layoutY="38.0" text="Кількість записів" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
             <Button fx:id="btnOther" layoutX="381.0" layoutY="63.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="144.0" stylesheets="@my.css" text="OtherLabs" />
+            <Button fx:id="btnText" layoutX="211.0" layoutY="58.0" mnemonicParsing="false" onAction="#openTextWindow" prefHeight="32.0" prefWidth="125.0" stylesheets="@my.css" text="тест" />
          </children>
       </AnchorPane>
    </children>
