--- a/src/main/resources/org/example/lab_2_lm/lab_2_lm.fxml
+++ b/src/main/resources/org/example/lab_2_lm/lab_2_lm.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" stylesheets="my.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.lab_2_lm.HelloController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" stylesheets="@my.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.lab_2_lm.HelloController">
 
    <children>
       <HBox maxHeight="100.0" prefHeight="100.0" prefWidth="600.0" stylesheets="@my.css" VBox.vgrow="ALWAYS">
@@ -71,8 +71,9 @@
          </VBox.margin>
          <children>
             <Label fx:id="labelCount" layoutX="68.0" layoutY="38.0" text="Кількість записів" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
-            <Button fx:id="btnOther" layoutX="381.0" layoutY="63.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="144.0" stylesheets="@my.css" text="OtherLabs" />
-            <Button fx:id="btnText" layoutX="211.0" layoutY="58.0" mnemonicParsing="false" onAction="#openTextWindow" prefHeight="32.0" prefWidth="125.0" stylesheets="@my.css" text="тест" />
+            <Button fx:id="btnOther" layoutX="434.0" layoutY="59.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="91.0" stylesheets="@my.css" text="OtherLabs" />
+            <Button fx:id="btnText" layoutX="318.0" layoutY="58.0" mnemonicParsing="false" onAction="#openTextWindow" prefHeight="32.0" prefWidth="76.0" stylesheets="@my.css" text="тест" />
+            <Button fx:id="btnData" layoutX="196.0" layoutY="58.0" mnemonicParsing="false" onAction="#openDataWindow" prefHeight="32.0" prefWidth="83.0" text="дата" />
          </children>
       </AnchorPane>
    </children>
